@@ -16,9 +16,11 @@
 */
 package com.ericsson.ei.subscriptionhandler;
 
-import java.net.URI;
+import java.io.UnsupportedEncodingException;
+import java.net.MalformedURLException;
 import java.net.URISyntaxException;
-import java.nio.charset.Charset;
+import java.net.URL;
+import java.net.URLDecoder;
 import java.text.ParseException;
 import java.util.ArrayList;
 import java.util.Base64;
@@ -52,9 +54,8 @@ import com.mongodb.BasicDBObject;
 import lombok.Getter;
 
 /**
- * This class represents the REST POST notification mechanism and the alternate
- * way to save the aggregatedObject details in the database when the
- * notification fails.
+ * This class represents the REST POST notification mechanism and the alternate way to save the
+ * aggregatedObject details in the database when the notification fails.
  *
  * @author xjibbal
  */
@@ -87,7 +88,7 @@ public class InformSubscriber {
     private JmesPathInterface jmespath;
 
     @Autowired
-    private SpringRestTemplate restTemplate;
+    private SendHttpRequest restTemplate;
 
     @Autowired
     private MongoDBHandler mongoDBHandler;
@@ -96,9 +97,8 @@ public class InformSubscriber {
     private SendMail sendMail;
 
     /**
-     * This method extracts the mode of notification through which the
-     * subscriber should be notified, from the subscription Object. And if the
-     * notification fails, then it saved in the database.
+     * This method extracts the mode of notification through which the subscriber should be notified,
+     * from the subscription Object. And if the notification fails, then it saved in the database.
      *
      * @param aggregatedObject
      * @param subscriptionJson
@@ -108,14 +108,12 @@ public class InformSubscriber {
         String notificationType = getSubscriptionField("notificationType", subscriptionJson);
         String notificationMeta = getSubscriptionField("notificationMeta", subscriptionJson);
 
-        String subject = getSubscriptionField("emailSubject", subscriptionJson);
-
         MultiValueMap<String, String> mapNotificationMessage = mapNotificationMessage(aggregatedObject,
                 subscriptionJson);
 
         if (notificationType.trim().equals("REST_POST")) {
             LOGGER.debug("Notification through REST_POST");
-            //prepare notification meta
+            // prepare notification meta
             notificationMeta = replaceParamsValuesWithAggregatedData(aggregatedObject, notificationMeta);
 
             // Prepare request headers
@@ -131,6 +129,7 @@ public class InformSubscriber {
 
         if (notificationType.trim().equals("MAIL")) {
             LOGGER.debug("Notification through EMAIL");
+            String subject = getSubscriptionField("emailSubject", subscriptionJson);
             try {
                 sendMail.sendMail(notificationMeta, String.valueOf((mapNotificationMessage.get("")).get(0)), subject);
             } catch (MessagingException e) {
@@ -155,8 +154,7 @@ public class InformSubscriber {
     }
 
     /**
-     * This method prepares headers to be used when making a rest call with the
-     * method POST.
+     * This method prepares headers to be used when making a rest call with the method POST.
      *
      * @param headers
      * @param notificationMeta
@@ -229,19 +227,18 @@ public class InformSubscriber {
     }
 
     /**
-     * Tries to fetch a Jenkins crumb. Will return when ever a crumb was not
-     * found.
+     * Tries to fetch a Jenkins crumb. Will return when ever a crumb was not found.
      *
      * @param encoding
      * @param notificationMeta
      * @return
      */
     private JsonNode fetchJenkinsCrumbIfAny(String encoding, String notificationMeta) {
-        URI url;
+        URL url;
         try {
             String baseUrl = extractBaseUrl(notificationMeta);
-            url = new URI(baseUrl + JENKINS_CRUMB_ENDPOINT);
-        } catch (URISyntaxException e) {
+            url = new URL(baseUrl + JENKINS_CRUMB_ENDPOINT);
+        } catch (MalformedURLException e) {
             LOGGER.error("Error! Failed to format url to collect jenkins crumb");
             return null;
         }
@@ -262,65 +259,134 @@ public class InformSubscriber {
     }
 
     /**
-     * This method extract the url parameters from the notification meta. It
-     * runs the parameter values through jmespath to replace wanted parameter
-     * values with data from the aggregated object. It then reformats the
-     * notification meta containing the new parameters.
+     * This method extract the url parameters from the notification meta. It runs the parameter values
+     * through jmespath to replace wanted parameter values with data from the aggregated object. It then
+     * reformats the notification meta containing the new parameters.
      *
      * @param aggregatedObject
      * @param notificationMeta
      * @return String
-     * @throws URISyntaxException
      */
     private String replaceParamsValuesWithAggregatedData(String aggregatedObject, String notificationMeta) {
         if (!notificationMeta.contains("?")) {
             return notificationMeta;
         }
-
         LOGGER.debug("Unformatted notificationMeta = " + notificationMeta);
+
         try {
             String baseUrl = extractBaseUrl(notificationMeta);
             String contextPath = extractContextPath(notificationMeta);
+            List<NameValuePair> params = extractUrlParameters(notificationMeta);
+            LOGGER.debug("Notification meta in parts:\n ## Base Url: {}\n ## Context Path: {}\n ## URL Parameters: {} ",
+                    baseUrl, contextPath, params);
 
-            List<NameValuePair> processedParams = processJmespathParameters(aggregatedObject, notificationMeta);
+            List<NameValuePair> processedParams = processJmespathParameters(aggregatedObject, params);
+            LOGGER.debug("JMESPATH processed parameters :\n ## {}", processedParams);
             String encodedQuery = URLEncodedUtils.format(processedParams, "UTF8");
 
             notificationMeta = String.format("%s%s?%s", baseUrl, contextPath, encodedQuery);
             LOGGER.debug("Formatted notificationMeta = " + notificationMeta);
 
             return notificationMeta;
-        } catch (URISyntaxException e) {
-            LOGGER.error("Failed to reformat url reason: " + e.getMessage());
+        } catch (MalformedURLException | UnsupportedEncodingException e) {
+            LOGGER.error("Failed to extract parameters: " + e.getMessage());
             return notificationMeta;
         }
     }
 
-    private List<NameValuePair> processJmespathParameters(String aggregatedObject, String notificationMeta) throws URISyntaxException {
-        List<NameValuePair> params = URLEncodedUtils.parse(new URI(notificationMeta), Charset.forName("UTF-8"));
+    /**
+     * Extract the query from the notificationMeta and returns them as a list of KeyValuePair
+     *
+     * @param notificationMeta
+     * @return
+     * @throws MalformedURLException
+     */
+    private List<NameValuePair> extractUrlParameters(String notificationMeta) throws MalformedURLException {
+        URL url = new URL(notificationMeta);
+        String query = url.getQuery();
+        List<NameValuePair> params = splitQuery(query);
+        return params;
+    }
+
+    /**
+     * Splits a query string into one pair for each key and value. Loops said pairs and extracts the key
+     * and value as KeyValuePair. Adds KeyValuePair to list.
+     *
+     * @param query
+     * @return List<KeyValuePair>
+     */
+    public List<NameValuePair> splitQuery(String query) {
+        List<NameValuePair> queryMap = new ArrayList<>();
+        String[] pairs = query.split("&");
+
+        for (String pair : pairs) {
+            NameValuePair nameValuePair = extractKeyAndValue(pair);
+            queryMap.add(nameValuePair);
+        }
+
+        return queryMap;
+    }
+
+    /**
+     * Extracts and decodes the key and value from a set of parameters
+     *
+     * @param pair
+     * @return KeyValuePair
+     */
+    private NameValuePair extractKeyAndValue(String pair) {
+        int firstIndexOfEqualsSign = pair.indexOf("=");
+        String key = "";
+        String value = "";
+
+        if (firstIndexOfEqualsSign > 0) {
+            key = pair.substring(0, firstIndexOfEqualsSign);
+        }
+
+        if (pair.length() > firstIndexOfEqualsSign + 1) {
+            value = pair.substring(firstIndexOfEqualsSign + 1);
+        }
+
+        return new BasicNameValuePair(key, value);
+    }
+
+    /**
+     * Runs JMESPATH rules on values in a list of KeyValuePair and replaces the value with extracted
+     * data
+     *
+     * @param aggregatedObject
+     * @param params
+     * @return List<NameValuePair>
+     * @throws UnsupportedEncodingException
+     */
+    private List<NameValuePair> processJmespathParameters(String aggregatedObject, List<NameValuePair> params)
+            throws UnsupportedEncodingException {
         List<NameValuePair> processedParams = new ArrayList<>();
 
         for (NameValuePair param : params) {
-            String name = param.getName(), value = param.getValue();
-            LOGGER.debug("Input parameter key and value: " + name + " : " + value);
-            value = jmespath.runRuleOnEvent(value.replaceAll(REGEX, ""), aggregatedObject).toString().replaceAll(REGEX, "");
+            String name = URLDecoder.decode(param.getName(), "UTF-8");
+            String value = URLDecoder.decode(param.getValue(), "UTF-8");
 
-            processedParams.add(new BasicNameValuePair(name, value));
+            LOGGER.debug("Input parameter key and value: " + name + " : " + value);
+            value = jmespath.runRuleOnEvent(value.replaceAll(REGEX, ""), aggregatedObject).toString().replaceAll(REGEX,
+                    "");
+
             LOGGER.debug("Formatted parameter key and value: " + name + " : " + value);
+            processedParams.add(new BasicNameValuePair(name, value));
         }
         return processedParams;
     }
 
     /**
-     * Returns the base url from the notification meta. Base url is all but
-     * context path and parameters.
+     * Returns the base url from the notification meta. Base url is all but context path and parameters.
      *
      * @param notificationMeta
      * @return
+     * @throws MalformedURLException
      * @throws URISyntaxException
      */
-    private String extractBaseUrl(String notificationMeta) throws URISyntaxException {
-        URI url = new URI(notificationMeta);
-        String protocol = url.getScheme();
+    private String extractBaseUrl(String notificationMeta) throws MalformedURLException {
+        URL url = new URL(notificationMeta);
+        String protocol = url.getProtocol();
         String authority = url.getAuthority();
         return String.format("%s://%s", protocol, authority);
     }
@@ -330,17 +396,18 @@ public class InformSubscriber {
      *
      * @param notificationMeta
      * @return
+     * @throws MalformedURLException
      * @throws URISyntaxException
      */
-    private String extractContextPath(String notificationMeta) throws URISyntaxException {
-        URI url = new URI(notificationMeta);
+    private String extractContextPath(String notificationMeta) throws MalformedURLException {
+        URL url = new URL(notificationMeta);
         String contextPath = url.getPath();
         return contextPath;
     }
 
     /**
-     * This method saves the missed Notification into a single document along
-     * with Subscription name, notification meta and time period.
+     * This method saves the missed Notification into a single document along with Subscription name,
+     * notification meta and time period.
      *
      * @param aggregatedObject
      * @param subscriptionName
@@ -392,8 +459,8 @@ public class InformSubscriber {
     private String getSubscriptionField(String fieldName, JsonNode subscriptionJson) {
         String value;
         if (subscriptionJson.get(fieldName) != null) {
-            value = subscriptionJson.get(fieldName).toString().replaceAll(REGEX, "");
-            LOGGER.debug("Extracted field name and value from subscription json:" + fieldName + " : " + value);
+            value = subscriptionJson.get(fieldName).asText();
+            LOGGER.debug("Extracted value [{}] from subscription field [{}].", value, fieldName);
         } else {
             value = "";
         }
@@ -412,19 +479,27 @@ public class InformSubscriber {
         ArrayNode arrNode = (ArrayNode) subscriptionJson.get("notificationMessageKeyValues");
 
         if (arrNode.isArray()) {
+            LOGGER.debug("Running jmespath extraction on form values.");
+
             for (final JsonNode objNode : arrNode) {
-                mapNotificationMessage.add(objNode.get("formkey").toString().replaceAll(REGEX, ""), jmespath
-                        .runRuleOnEvent(objNode.get("formvalue").toString().replaceAll(REGEX, ""), aggregatedObject)
-                        .toString().replaceAll(REGEX, ""));
+                String formKey = objNode.get("formkey").asText();
+                String preJmesPathExractionFormValue = objNode.get("formvalue").asText();
+
+                JsonNode extractedJsonNode = jmespath.runRuleOnEvent(preJmesPathExractionFormValue, aggregatedObject);
+                String postJmesPathExractionFormValue = extractedJsonNode.toString().replaceAll(REGEX, "");
+
+                LOGGER.debug("formValue after running the extraction: [{}] for formKey: [{}]",
+                        postJmesPathExractionFormValue, formKey);
+
+                mapNotificationMessage.add(formKey, postJmesPathExractionFormValue);
             }
-            ;
         }
         return mapNotificationMessage;
     }
 
     /**
-     * This method is responsible to display the configurable application
-     * properties and to create TTL index on the missed Notification collection.
+     * This method is responsible to display the configurable application properties and to create TTL
+     * index on the missed Notification collection.
      */
     @PostConstruct
     public void init() {
